_rendered/apps/jellyfin/cilium_io-ciliumnetworkpolicy-jellyfin-preset-cnp.yaml
# Source: jellyfin/charts/jellyfin/charts/networkpolicy/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: jellyfin-preset-cnp
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
    - fromEndpoints:
        - matchLabels:
            custom.network/jellyfin-tools: "egress"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
    - fromEndpoints:
        - matchLabels:
            custom.network/heimdall-integrated: "egress"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
  egress:
    - toEndpoints:
        - {}
    - toEntities:
        - world
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
